# Countdown

./: .gitignore  README.md  package.json
src/: App.css  App.tsx  QuickView.css  QuickView.tsx  Requests.css  Requests.tsx  Settings.css  Settings.tsx  Wizard.css  Wizard.tsx  desktop.ts  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: background_sync.rs  lib.rs  localization.rs  main.rs
src-tauri/src/analytics/: mod.rs
src-tauri/src/app/: commands.rs
src-tauri/src/collectors/: claude_code.rs  codex.rs  managed_launch.rs  manager.rs  mod.rs
src-tauri/src/compat_api/: mod.rs
src-tauri/src/db/: migrations.rs  mod.rs  repository.rs
src-tauri/src/models/: mod.rs
src-tauri/src/tray/: mod.rs
src/i18n/: LanguageProvider.tsx  formatters.ts  index.ts  translations.ts
